--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -31,7 +31,7 @@
                 android:ellipsize="end"
                 android:maxLines="3"
                 tools:text="sdfssdfsdsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsffsfsfsdfsdfsfsfsdfsdfsfsfdfsfsf"
-                tools:textColor="@color/text_black_cd"
+                android:textColor="@color/text_black_cd"
                 tools:textSize="@dimen/msg_title" />
 
             <LinearLayout
@@ -45,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="sdfsdfsfsf"
-                    tools:textColor="@color/app_text_gray"
+                    android:textColor="@color/app_text_gray"
                     tools:textSize="@dimen/msg_state_size" />
 
                 <View
@@ -60,7 +60,7 @@
                     android:ellipsize="end"
                     android:maxLines="3"
                     tools:text="分享"
-                    tools:textColor="@color/app_text_gray"
+                    android:textColor="@color/app_text_gray"
                     tools:textSize="@dimen/msg_state_size" />
 
 
