--- a/app/src/main/res/layout/item_user_bbs_comments.xml
+++ b/app/src/main/res/layout/item_user_bbs_comments.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/lin_bg"
@@ -34,7 +35,7 @@
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsfsdf"
+                    tools:text="sdfsdfsfsdf"
                     android:textColor="@color/text_black_cd"
                     android:textSize="14sp" />
 
@@ -44,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="1分钟前"
+                    tools:text="1分钟前"
                     android:textColor="@color/app_text_gray"
                     android:textSize="14sp" />
 
@@ -69,7 +70,7 @@
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="回复 我"
+                tools:text="回复 我"
                 android:textColor="@color/text_black_cd"
                 android:textSize="16sp" />
 
@@ -90,7 +91,7 @@
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:padding="10dp"
-                    android:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我"
+                    tools:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我"
                     android:textColor="@color/text_black_cd"
                     android:textSize="14sp" />
 
