--- a/app/src/main/res/layout/item_user_my_comments.xml
+++ b/app/src/main/res/layout/item_user_my_comments.xml
@@ -36,7 +36,7 @@
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsfsdf"
+                    tools:text="sdfsdfsfsdf"
                     android:textColor="@color/text_black_cd"
                     android:textSize="14sp" />
 
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="1分钟前"
+                    tools:text="1分钟前"
                     android:textColor="@color/app_text_gray"
                     android:textSize="14sp" />
 
@@ -71,7 +71,7 @@
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="回复 我"
+                tools:text="回复 我"
                 android:textColor="@color/text_black_cd"
                 android:textSize="16sp" />
 
@@ -106,7 +106,7 @@
                     android:layout_marginLeft="5dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我"
+                    tools:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我"
                     android:textColor="@color/text_black_cd"
                     android:textSize="14sp" />
 
