--- a/app/src/main/res/layout/item_user_my_comments_2.xml
+++ b/app/src/main/res/layout/item_user_my_comments_2.xml
@@ -36,7 +36,7 @@
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsfsdf"
+                    tools:text="sdfsdfsfsdf"
                     android:textColor="@color/text_black_cd"
                     android:textSize="14sp" />
 
@@ -77,7 +77,7 @@
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="1分钟前"
+                tools:text="1分钟前"
                 android:textColor="@color/app_text_gray"
                 android:textSize="14sp" />
 
@@ -100,7 +100,7 @@
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="回复 我"
+                tools:text="回复 我"
                 android:textColor="@color/text_black_cd"
                 android:textSize="16sp" />
 
