--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -36,11 +36,11 @@
         </FrameLayout>
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:background="@color/page_bg"
-            android:paddingBottom="50dp">
+           >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -150,19 +150,21 @@
 
 
                 <TextView
+                    android:layout_marginBottom="50dp"
                     android:id="@+id/tv_logout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center|right"
                     android:layout_marginTop="35dp"
-                    android:background="@drawable/selector_gray"
                     android:gravity="center"
                     android:text="退出登录"
                     android:textColor="#ff5757"
                     android:textSize="14sp"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    />
 
             </LinearLayout>
+
         </ScrollView>
     </LinearLayout>
 </layout>
