--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,8 +90,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@null"
-                    android:textColor="@color/app_hint_color"
                     android:hint="@string/validation_code"
+                    android:textColor="@color/app_hint_color"
                     android:textColorHint="@color/app_text_color"
                     android:textSize="15sp" />
 
@@ -120,7 +120,8 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp">
+                android:layout_marginTop="100dp"
+                android:visibility="invisible">
 
                 <View
                     style="@style/style_split_line"
@@ -149,7 +150,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="35dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="invisible">
 
                 <LinearLayout
                     android:layout_width="0dp"
