--- a/app/src/main/res/layout/item_user_my_comments.xml
+++ b/app/src/main/res/layout/item_user_my_comments.xml
@@ -103,12 +103,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    tools:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我" />
 
 
             </LinearLayout>
