--- a/app/src/main/res/layout/item_user_my_comments_2.xml
+++ b/app/src/main/res/layout/item_user_my_comments_2.xml
@@ -36,9 +36,9 @@
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    tools:text="sdfsdfsfsdf"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="sdfsdfsfsdf" />
 
                 <LinearLayout
                     android:id="@+id/lin_like"
@@ -77,9 +77,9 @@
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                tools:text="1分钟前"
                 android:textColor="@color/app_text_gray"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="1分钟前" />
 
 
             <TextView
@@ -100,9 +100,9 @@
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                tools:text="回复 我"
                 android:textColor="@color/text_black_cd"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:text="回复 我" />
 
         </LinearLayout>
 
