--- a/app/src/main/res/layout/layout_user_center.xml
+++ b/app/src/main/res/layout/layout_user_center.xml
@@ -8,8 +8,9 @@
         android:id="@+id/lin_user_head"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/app_title_bg"
+        android:background="@color/user_center_bg"
         android:orientation="horizontal">
+
 
         <ImageView
             android:id="@+id/img_user_logo"
