--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="market_red">#ff5757</color>
     <color name="red">#ff5757</color>
     <color name="bbs_state_color">#2f93ed</color>
+    <color name="user_center_bg">#2e2e2e</color>
 </resources>
