--- a/app/src/main/res/layout/activity_nickname_update.xml
+++ b/app/src/main/res/layout/activity_nickname_update.xml
@@ -12,7 +12,6 @@
             android:layout_height="60dp"
             android:background="@color/white"
             android:hint="请输入昵称"
-            android:maxLength="16"
             android:maxLines="1"
             android:paddingLeft="15dp"
             android:textColor="@color/text_black_cd"
@@ -20,6 +19,18 @@
             android:textSize="14sp" />
 
         <View style="@style/style_split_line" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center_vertical"
+            android:hint="昵称不能超过8个汉字或16个英文字母"
+            android:maxLines="1"
+            android:paddingLeft="15dp"
+            android:textColor="@color/text_black_cd"
+            android:textColorHint="@color/app_hint_color"
+            android:textSize="14sp" />
+
 
     </LinearLayout>
 </layout>
