--- a/cdcommon/src/main/res/values/styles.xml
+++ b/cdcommon/src/main/res/values/styles.xml
@@ -23,8 +23,8 @@
     <style name="MyTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/text_color</item>
+        <item name="textAllCaps">false</item>
     </style>
-
 
     <!--弹框styles设置-->
     <style name="TipsDialog" parent="@android:style/Theme.Dialog">
