--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -19,6 +19,7 @@
             android:textSize="17sp" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
