--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -71,7 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="15dp"
-                        android:text="@string/fast_to_login"
+                        tools:text="@string/fast_to_login"
                         android:textColor="@color/white"
                         android:textSize="17sp" />
 
