--- a/app/src/main/res/layout/item_user_my_comments.xml
+++ b/app/src/main/res/layout/item_user_my_comments.xml
@@ -34,9 +34,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    tools:text="sdfsdfsfsdf"
+                    tools:text="sdfsdfsfsdsdfsdfsfsdfsdfsdfsfsdfsdfsdfsfsdfsdfsdfsfsdfsdfsdfsfsdff"
                     android:textColor="@color/text_black_cd"
                     android:textSize="14sp" />
 
