--- a/app/src/main/res/layout/activity_fast_message_share.xml
+++ b/app/src/main/res/layout/activity_fast_message_share.xml
@@ -24,7 +24,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="-10dp"
-                    android:background="@drawable/msg_share" />
+                    android:background="@drawable/share_message_top" />
 
 
                 <TextView
