--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -36,11 +36,10 @@
         </FrameLayout>
 
         <ScrollView
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/page_bg"
-           >
+            android:layout_weight="1"
+            android:background="@color/page_bg">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,9 +70,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="15dp"
-                        tools:text="@string/fast_to_login"
                         android:textColor="@color/white"
-                        android:textSize="17sp" />
+                        android:textSize="17sp"
+                        tools:text="@string/fast_to_login" />
 
 
                 </LinearLayout>
@@ -150,18 +149,18 @@
 
 
                 <TextView
-                    android:layout_marginBottom="50dp"
                     android:id="@+id/tv_logout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center|right"
+                    android:layout_marginBottom="50dp"
                     android:layout_marginTop="35dp"
+                    android:background="@color/white"
                     android:gravity="center"
                     android:text="退出登录"
                     android:textColor="#ff5757"
                     android:textSize="14sp"
-                    android:visibility="gone"
-                    />
+                    android:visibility="gone" />
 
             </LinearLayout>
 
