--- a/app/src/main/res/layout/layout_message_detail.xml
+++ b/app/src/main/res/layout/layout_message_detail.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
+        android:descendantFocusability="blocksDescendants"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
