--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -30,8 +30,8 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="3"
-                tools:text="sdfssdfsdsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsffsfsfsdfsdfsfsfsdfsdfsfsfdfsfsf"
                 android:textColor="@color/text_black_cd"
+                tools:text="sdfssdfsdsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsffsfsfsdfsdfsfsfsdfsdfsfsfdfsfsf"
                 tools:textSize="@dimen/msg_title" />
 
             <LinearLayout
@@ -44,8 +44,8 @@
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="sdfsdfsfsf"
                     android:textColor="@color/app_text_gray"
+                    tools:text="sdfsdfsfsf"
                     tools:textSize="@dimen/msg_state_size" />
 
                 <View
@@ -59,8 +59,8 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    tools:text="分享"
                     android:textColor="@color/app_text_gray"
+                    tools:text="分享"
                     tools:textSize="@dimen/msg_state_size" />
 
 
@@ -70,7 +70,8 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="95dp"
+            android:layout_marginRight="1dp"
             app:cardCornerRadius="5dp">
 
             <ImageView
