--- a/app/src/main/res/layout/item_message_three_pic.xml
+++ b/app/src/main/res/layout/item_message_three_pic.xml
@@ -23,6 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -62,7 +63,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             app:cardCornerRadius="5dp">
 
