--- a/app/src/main/res/layout/activity_fast_message_share.xml
+++ b/app/src/main/res/layout/activity_fast_message_share.xml
@@ -8,6 +8,7 @@
         android:orientation="vertical">
 
         <ScrollView
+            android:scrollbars="none"
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -71,7 +72,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="80dp"
+                    android:layout_marginBottom="50dp"
                     android:layout_marginLeft="@dimen/layout_left_interval"
                     android:layout_marginTop="120dp"
                     android:gravity="center_vertical"
