--- a/app/src/main/res/layout/layout_main_mottom_tab.xml
+++ b/app/src/main/res/layout/layout_main_mottom_tab.xml
@@ -4,10 +4,10 @@
 
     <RadioGroup
         android:id="@+id/radiogroup"
-        android:background="@color/gray_bg"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="bottom"
+        android:background="@color/gray_bg"
         android:orientation="horizontal">
 
         <RadioButton
@@ -26,11 +26,16 @@
             android:text="@string/market" />
 
         <RadioButton
-            android:id="@+id/radio_main_tab_3"
-            android:visibility="gone"
             style="@style/main_tab_radio"
             android:drawableTop="@drawable/main_buttom_tab_3"
-            android:text="@string/coin_bbs" />
+            android:text="@string/coin_bbs"
+            android:visibility="gone" />
+
+        <RadioButton
+            android:id="@+id/radio_main_tab_3"
+            style="@style/main_tab_radio"
+            android:drawableTop="@drawable/main_buttom_tab_3"
+            android:text="板块" />
 
         <RadioButton
             android:id="@+id/radio_main_tab_4"
