--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="red">#ff5757</color>
     <color name="bbs_state_color">#2f93ed</color>
     <color name="user_center_bg">#2e2e2e</color>
+    <color name="text_gray_8181881">#818181</color>
 </resources>
