--- a/cdcommon/src/main/res/values/colors.xml
+++ b/cdcommon/src/main/res/values/colors.xml
@@ -80,5 +80,6 @@
 
     <color name="text_color_333333">#333333</color>
     <color name="text_color_666666">#666666</color>
+    <color name="text_color_3A3A3A">#3A3A3A</color>
 
 </resources>
