--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2F93ED</color>
-    <color name="colorPrimaryDark">#2F93ED</color>
-    <color name="colorAccent">#2F93ED</color>
+    <color name="colorPrimary">#022454</color>
+    <color name="colorPrimaryDark">#022454</color>
+    <color name="colorAccent">#022454</color>
 
 
-    <color name="app_title_bg">#2F93ED</color>
+    <color name="app_title_bg">#022454</color>
     <color name="app_text_color">#2F93ED</color>
     <color name="app_text_color_yellow">#F6A623</color>
-    <color name="app_main_txt_select_un">#616161</color>
-    <color name="app_main_txt_select">#2F93ED</color>
+    <color name="app_main_txt_select_un">#A6A6A6</color>
+    <color name="app_main_txt_select">#022454</color>
 
     <color name="radiobutton_txt_select">#2F93ED</color>
     <color name="radiobutton_txt_select_un">#ffffff</color>
