--- a/cdcommon/src/main/res/layout/empty_view.xml
+++ b/cdcommon/src/main/res/layout/empty_view.xml
@@ -12,22 +12,21 @@
         android:paddingTop="90dp">
 
         <ImageView
-            android:visibility="gone"
             android:id="@+id/img"
             android:layout_width="105dp"
             android:layout_height="105dp"
-            tools:src="@mipmap/ic_launcher" />
+            android:visibility="gone" />
 
         <TextView
-            android:visibility="gone"
-            android:layout_marginBottom="80dp"
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="80dp"
             android:layout_marginTop="23dp"
             android:maxLength="100"
             android:textColor="@color/text_color"
-            android:textSize="16sp"
+            android:textSize="13sp"
+            android:visibility="gone"
             tools:text="暂无数据" />
 
     </LinearLayout>
