--- a/cdcommon/src/main/res/values/colors.xml
+++ b/cdcommon/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#00ffffff</color>
     <color name="colorPrimaryDark">#00ffffff</color>
-    <color name="colorAccent">#2F93ED</color>
+    <color name="colorAccent">#022454</color>
 
     <color name="gray_bg">#f6f6f6</color>
-    <color name="title_bg">#2F93ED</color>
+    <color name="title_bg">#022454</color>
     <color name="title_left_tv">#ffffff</color>
     <color name="title_right_tv">#ffffff</color>
     <color name="title_mid_tv">#ffffff</color>
