--- a/app/src/main/res/layout/activity_user_person.xml
+++ b/app/src/main/res/layout/activity_user_person.xml
@@ -3,15 +3,15 @@
 
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/lin_user_head"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/user_center_bg"
+            android:layout_height="110dp"
+            android:background="@drawable/user_center_bg"
             android:orientation="horizontal">
 
 
@@ -33,9 +33,9 @@
                 android:layout_marginLeft="15dp"
                 android:ellipsize="end"
                 android:singleLine="true"
+                android:text="@string/fast_to_login"
                 android:textColor="@color/white"
-                android:textSize="17sp"
-                android:text="@string/fast_to_login" />
+                android:textSize="17sp" />
 
 
         </LinearLayout>
